--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
   </head>
 
-  <body>
+  <body style="opacity: 0.0; transition: opacity 1s ease-in-out;">
     <app-container>
       <header>
         <app-logo>HEADER</app-logo>
