--- a/index.html
+++ b/index.html
@@ -152,6 +152,12 @@
         <app-version>v.0.00001</app-version>
       </footer>
     </app-container>
+    <script type="text/javascript" charset="utf-8" src="assets/js/scripts.js"></script>
+    <noscript>
+      <style>
+        body {opacity: 1.0;}
+      </style>
+    </noscript>
   </body>
 
 </html>
