--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="en">
 
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="D7460N" />
+    <meta name="description" content="Could tell you, but then I'd have to... well, you know." />
+    <meta name="color-scheme" content="dark light" />
+    <title>D7460N</title>
+    <link type="image/svg+xml" rel="icon" href="assets/images/logo.svg" />
+    <link type="text/css" rel="stylesheet" href="assets/css/styles.css" />
   </head>
 
   <body style="opacity: 0.0; transition: opacity 1s ease-in-out;">
