--- a/index.html
+++ b/index.html
@@ -15,151 +15,132 @@
 
   <body style="opacity: 0.0; transition: opacity 1s ease-in-out;">
     <app-container>
-      <header>
-        <app-logo>HEADER</app-logo>
-        <label for="toggleLayout">
-          <input type="checkbox" id="toggleLayout" />
-          <demo-buttons>Layouts</demo-buttons>
-        </label>
-        <label for="oneMenu">
-          <demo-buttons>Menu</demo-buttons>
-          <menu>
-            <li>Save for later</li>
-            <li>Share this news</li>
-          </menu>
-        </label>
-        <label for="toggleTheme">
-          <input type="checkbox" id="toggleTheme" />
-          <demo-buttons>&#9788;</demo-buttons>
-        </label>
-      </header>
-      <nav>
-        <h4>NAV</h4>
-        <panel-list>
-          <label for="radio01">
-            <input type="radio" id="radio01" name="radio" checked />
-            <list-cell>NAV TAB 01</list-cell>
-          </label>
-          <label for="radio02">
-            <input type="radio" id="radio02" name="radio" />
-            <list-cell>NAV TAB 02</list-cell>
-          </label>
-          <label for="radio03">
-            <input type="radio" id="radio03" name="radio" />
-            <list-cell>NAV TAB 03</list-cell>
-          </label>
-          <label for="radio04">
-            <input type="radio" id="radio04" name="radio" />
-            <list-cell>NAV TAB 04</list-cell>
-          </label>
-          <label for="radio05">
-            <input type="radio" id="radio05" name="radio" />
-            <list-cell>NAV TAB 05</list-cell>
-          </label>
-        </panel-list>
-      </nav>
-      <main>
-        <h4>MAIN</h4>
-        <panel-tab id="tab01">
-          <p>TAB 01</p>
-          <panel-list>
-            <p>Sticky header/scrollable content (no js).</p>
-          </panel-list>
-        </panel-tab>
-        <panel-tab id="tab02">
-          <p>TAB 02</p>
-          <panel-list class="container">
-            <div>
-              <div id="elem"></div>
-              <div>
-                <p>Sticky header/scrollable content (no js).</p>
-                <p>Eget mauris pharetra et ultrices neque ornare aenean euismod elementum. Massa enim nec dui nunc
-                  mattis enim.</p>
-                <p>Viverra suspendisse potenti nullam ac tortor vitae. Ornare lectus sit amet est placerat in egestas
-                  erat. Mi proin sed libero enim sed faucibus turpis in eu. Iaculis at erat pellentesque adipiscing
-                  commodo elit. Ac orci phasellus egestas tellus rutrum tellus pellentesque.</p>
-                <p>Integer feugiat scelerisque varius morbi enim nunc faucibus a. Non odio euismod lacinia at quis risus
-                  sed. Donec enim diam vulputate ut. Tempor nec feugiat nisl pretium fusce id velit ut tortor. Dolor sit
-                  amet consectetur adipiscing elit duis tristique sollicitudin. Massa massa ultricies mi quis hendrerit
-                  dolor magna eget.</p>
-                <p>Viverra suspendisse potenti nullam ac tortor vitae. Ornare lectus sit amet est placerat in egestas
-                  erat. Mi proin sed libero enim sed faucibus turpis in eu. Iaculis at erat pellentesque adipiscing
-                  commodo elit. Ac orci phasellus egestas tellus rutrum tellus pellentesque.</p>
-                <p>Integer feugiat scelerisque varius morbi enim nunc faucibus a. Non odio euismod lacinia at quis risus
-                  sed. Donec enim diam vulputate ut. Tempor nec feugiat nisl pretium fusce id velit ut tortor. Dolor sit
-                  amet consectetur adipiscing elit duis tristique sollicitudin. Massa massa ultricies mi quis hendrerit
-                  dolor magna eget.</p>
-                <p>Viverra suspendisse potenti nullam ac tortor vitae. Ornare lectus sit amet est placerat in egestas
-                  erat. Mi proin sed libero enim sed faucibus turpis in eu. Iaculis at erat pellentesque adipiscing
-                  commodo elit. Ac orci phasellus egestas tellus rutrum tellus pellentesque.</p>
-                <p>Integer feugiat scelerisque varius morbi enim nunc faucibus a. Non odio euismod lacinia at quis risus
-                  sed. Donec enim diam vulputate ut. Tempor nec feugiat nisl pretium fusce id velit ut tortor. Dolor sit
-                  amet consectetur adipiscing elit duis tristique sollicitudin. Massa massa ultricies mi quis hendrerit
-                  dolor magna eget.</p>
-              </div>
-            </div>
-            <a href="#elem" class="top"></a>
-          </panel-list>
-        </panel-tab>
-        <panel-tab id="tab03">
-          <p>TAB 03</p>
-          <panel-list>
-            <p>Sticky header/scrollable content (no js).</p>
-            <p>Vitae tempus quam pellentesque nec. Odio aenean sed adipiscing diam donec adipiscing tristique risus.
-              Congue eu consequat ac felis donec et odio.</p>
-            <p>Adipiscing enim eu turpis egestas pretium aenean. Posuere morbi leo urna molestie at elementum eu
-              facilisis. Aenean et tortor at risus viverra adipiscing at in. Egestas sed tempus urna et pharetra
-              pharetra massa.</p>
-          </panel-list>
-        </panel-tab>
-        <panel-tab id="tab04">
-          <p>TAB 04</p>
-          <panel-list>
-            <p>Sticky header/scrollable content (no js).</p>
-            <p>Lectus mauris ultrices eros in cursus turpis massa. Ultrices gravida dictum fusce ut placerat orci.</p>
-            <p>Quisque id diam vel quam elementum. Ut sem viverra aliquet eget. Elementum tempus egestas sed sed risus
-              pretium.</p>
-          </panel-list>
-        </panel-tab>
-        <panel-tab id="tab05">
-          <p>TAB 05</p>
-          <panel-list>
-            <p>Sticky header/scrollable content (no js).</p>
-            <p>Mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et.</p>
-            <p>Et molestie ac feugiat sed lectus vestibulum mattis. Vestibulum morbi blandit cursus risus at ultrices mi
-              tempus.</p>
-          </panel-list>
-        </panel-tab>
-      </main>
-      <aside>
-        <h4>ASIDE</h4>
-        <panel-list>
-          <p>Sticky header/scrollable content (no js).</p>
-          <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual
-            form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a
-            placeholder before final copy is available.</p>
-          <p>Adipiscing enim eu turpis egestas pretium aenean. Posuere morbi leo urna molestie at elementum eu
-            facilisis. Aenean et tortor at risus viverra adipiscing at in. Egestas sed tempus urna et pharetra pharetra
-            massa.</p>
-          <p>ASIDE content. In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to
-            demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum
-            may be used as a placeholder before final copy is available.</p>
-          <p>Adipiscing enim eu turpis egestas pretium aenean. Posuere morbi leo urna molestie at elementum eu
-            facilisis. Aenean et tortor at risus viverra adipiscing at in. Egestas sed tempus urna et pharetra pharetra
-            massa.</p>
-        </panel-list>
-      </aside>
-      <aside-2>
-        <h4>ASIDE-2</h4>
-        <panel-list>
-          <p>Sticky header/scrollable content (no js).</p>
-        </panel-list>
-      </aside-2>
-      <footer>
-        <powered-by>FOOTER</powered-by>
-        <app-version>v.0.00001</app-version>
-      </footer>
-    </app-container>
+  <header>
+    <app-logo>HEADER</app-logo>
+    <label for="toggleLayout">
+      <input type="checkbox" id="toggleLayout" />
+      <demo-buttons>Layouts</demo-buttons>
+    </label>
+    <label for="oneMenu">
+      <demo-buttons>Menu</demo-buttons>
+      <menu>
+        <li>Save for later</li>
+        <li>Share this news</li>
+      </menu>
+    </label>
+    <label for="toggleTheme">
+      <input type="checkbox" id="toggleTheme" />
+      <demo-buttons>&#9788;</demo-buttons>
+    </label>
+  </header>
+  <nav>
+    <h4>NAV</h4>
+    <panel-list>
+      <label for="radio01">
+        <input type="radio" id="radio01" name="radio" checked />
+        <list-cell>NAV TAB 01</list-cell>
+      </label>
+      <label for="radio02">
+        <input type="radio" id="radio02" name="radio" />
+        <list-cell>NAV TAB 02</list-cell>
+      </label>
+      <label for="radio03">
+        <input type="radio" id="radio03" name="radio" />
+        <list-cell>NAV TAB 03</list-cell>
+      </label>
+      <label for="radio04">
+        <input type="radio" id="radio04" name="radio" />
+        <list-cell>NAV TAB 04</list-cell>
+      </label>
+      <label for="radio05">
+        <input type="radio" id="radio05" name="radio" />
+        <list-cell>NAV TAB 05</list-cell>
+      </label>
+    </panel-list>
+  </nav>
+  <main>
+    <h4>MAIN</h4>
+    <panel-tab id="tab01">
+      <p>Curated Tweets by DragonTheory</p>
+      <panel-list>
+        <a class="twitter-timeline" data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" data-theme="dark" href="https://twitter.com/dragontheory?ref_src=twsrc%5Etfw" data-aria-polite="polite">Tweets by dragontheory</a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </panel-list>
+    </panel-tab>
+    <panel-tab id="tab02">
+      <p>TAB 02</p>
+      <panel-list class="container">
+        <div>
+          <div id="elem"></div>
+          <div>
+            <p>Sticky header/scrolllable content (no js).</p>
+            <p>Eget mauris pharetra et ultrices neque ornare aenean euismod elementum. Massa enim nec dui nunc mattis enim.</p>
+            <p>Viverra suspendisse potenti nullam ac tortor vitae. Ornare lectus sit amet est placerat in egestas erat. Mi proin sed libero enim sed faucibus turpis in eu. Iaculis at erat pellentesque adipiscing commodo elit. Ac orci phasellus egestas tellus rutrum tellus pellentesque.</p>
+            <p>Integer feugiat scelerisque varius morbi enim nunc faucibus a. Non odio euismod lacinia at quis risus sed. Donec enim diam vulputate ut. Tempor nec feugiat nisl pretium fusce id velit ut tortor. Dolor sit amet consectetur adipiscing elit duis tristique sollicitudin. Massa massa ultricies mi quis hendrerit dolor magna eget.</p>
+            <p>Viverra suspendisse potenti nullam ac tortor vitae. Ornare lectus sit amet est placerat in egestas erat. Mi proin sed libero enim sed faucibus turpis in eu. Iaculis at erat pellentesque adipiscing commodo elit. Ac orci phasellus egestas tellus rutrum tellus pellentesque.</p>
+            <p>Integer feugiat scelerisque varius morbi enim nunc faucibus a. Non odio euismod lacinia at quis risus sed. Donec enim diam vulputate ut. Tempor nec feugiat nisl pretium fusce id velit ut tortor. Dolor sit amet consectetur adipiscing elit duis tristique sollicitudin. Massa massa ultricies mi quis hendrerit dolor magna eget.</p>
+            <p>Viverra suspendisse potenti nullam ac tortor vitae. Ornare lectus sit amet est placerat in egestas erat. Mi proin sed libero enim sed faucibus turpis in eu. Iaculis at erat pellentesque adipiscing commodo elit. Ac orci phasellus egestas tellus rutrum tellus pellentesque.</p>
+            <p>Integer feugiat scelerisque varius morbi enim nunc faucibus a. Non odio euismod lacinia at quis risus sed. Donec enim diam vulputate ut. Tempor nec feugiat nisl pretium fusce id velit ut tortor. Dolor sit amet consectetur adipiscing elit duis tristique sollicitudin. Massa massa ultricies mi quis hendrerit dolor magna eget.</p>
+          </div>
+        </div>
+        <a href="#elem" class="top"></a>
+      </panel-list>
+    </panel-tab>
+    <panel-tab id="tab03">
+      <p>TAB 03</p>
+      <panel-list>
+        <p>Sticky header/scrolllable content (no js).</p>
+        <p>Vitae tempus quam pellentesque nec. Odio aenean sed adipiscing diam donec adipiscing tristique risus. Congue eu consequat ac felis donec et odio.</p>
+        <p>Adipiscing enim eu turpis egestas pretium aenean. Posuere morbi leo urna molestie at elementum eu facilisis. Aenean et tortor at risus viverra adipiscing at in. Egestas sed tempus urna et pharetra pharetra massa.</p>
+      </panel-list>
+    </panel-tab>
+    <panel-tab id="tab04">
+      <p>TAB 04</p>
+      <panel-list>
+        <p>Sticky header/scrolllable content (no js).</p>
+        <p>Lectus mauris ultrices eros in cursus turpis massa. Ultrices gravida dictum fusce ut placerat orci.</p>
+        <p>Quisque id diam vel quam elementum. Ut sem viverra aliquet eget. Elementum tempus egestas sed sed risus pretium.</p>
+      </panel-list>
+    </panel-tab>
+    <panel-tab id="tab05">
+      <p>TAB 05</p>
+      <panel-list>
+        <p>Sticky header/scrolllable content (no js).</p>
+        <p>Mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et.</p>
+        <p>Et molestie ac feugiat sed lectus vestibulum mattis. Vestibulum morbi blandit cursus risus at ultrices mi tempus.</p>
+      </panel-list>
+    </panel-tab>
+  </main>
+  <aside>
+    <h4>ASIDE</h4>
+    <panel-list>
+      <p>Sticky header/scrolllable content (no js).</p>
+      <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available.</p>
+      <p>Adipiscing enim eu turpis egestas pretium aenean. Posuere morbi leo urna molestie at elementum eu facilisis. Aenean et tortor at risus viverra adipiscing at in. Egestas sed tempus urna et pharetra pharetra massa.</p>
+      <p>ASIDE content. In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available.</p>
+      <p>Adipiscing enim eu turpis egestas pretium aenean. Posuere morbi leo urna molestie at elementum eu facilisis. Aenean et tortor at risus viverra adipiscing at in. Egestas sed tempus urna et pharetra pharetra massa.</p>
+    </panel-list>
+  </aside>
+  <aside-2>
+    <h4>ASIDE-2</h4>
+    <panel-list>
+      <div class="unsupported">
+        <p>Your browser does not support <span-bold>CSS :has() pseudo-class</span-bold>.</p>
+        <p>Coming soon...</p>
+        <p>In the mean-time, switch to a Chromium based browser.</p>
+      </div>
+      <div class="supported">
+        <p>
+          Your browser supports <span-bold>CSS :has() pseudo-class</span-bold>!
+        </p>
+      </div>
+    </panel-list>
+  </aside-2>
+  <footer>
+    <powered-by>FOOTER</powered-by>
+    <app-version>v.0.00001</app-version>
+  </footer>
+</app-container>
     <script type="text/javascript" charset="utf-8" src="assets/js/scripts.js"></script>
     <noscript>
       <style>
