--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <main>
     <h4>MAIN</h4>
     <panel-tab id="tab01">
-      <p>Curated Tweets by DragonTheory</p>
+      <p>Curated Tweets by DragonTheory : :</p>
       <panel-list>
         <a class="twitter-timeline" data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" data-theme="dark" href="https://twitter.com/dragontheory?ref_src=twsrc%5Etfw" data-aria-polite="polite">Tweets by dragontheory</a>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
