--- a/index.html
+++ b/index.html
@@ -34,42 +34,45 @@
     </label>
   </header>
   <nav>
-    <h4>NAV</h4>
+    <h4>Twitter Topics</h4>
     <panel-list>
       <label for="radio01">
         <input type="radio" id="radio01" name="radio" checked />
-        <list-cell>NAV TAB 01</list-cell>
+        <list-cell>Everything</list-cell>
       </label>
       <label for="radio02">
         <input type="radio" id="radio02" name="radio" />
-        <list-cell>NAV TAB 02</list-cell>
+        <list-cell>Web Dev</list-cell>
       </label>
       <label for="radio03">
         <input type="radio" id="radio03" name="radio" />
-        <list-cell>NAV TAB 03</list-cell>
+        <list-cell>CSS Only</list-cell>
       </label>
       <label for="radio04">
         <input type="radio" id="radio04" name="radio" />
-        <list-cell>NAV TAB 04</list-cell>
+        <list-cell>GOD</list-cell>
       </label>
       <label for="radio05">
         <input type="radio" id="radio05" name="radio" />
-        <list-cell>NAV TAB 05</list-cell>
+        <list-cell>News</list-cell>
       </label>
     </panel-list>
   </nav>
   <main>
-    <h4>MAIN</h4>
+    <h4>Curated Tweets by DragonTheory : :</h4>
     <panel-tab id="tab01">
-      <p>Curated Tweets by DragonTheory : :</p>
+      <p>Intro paragraph.</p>
       <panel-list>
-        <a class="twitter-timeline" data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" data-theme="dark" href="https://twitter.com/dragontheory?ref_src=twsrc%5Etfw" data-aria-polite="polite">Tweets by dragontheory</a>
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a class="twitter-timeline" 
+           data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" 
+           data-theme="dark"
+           href="https://twitter.com/dragontheory?ref_src=twsrc%5Etfw" 
+           data-aria-polite="polite">Tweets by dragontheory</a>
       </panel-list>
     </panel-tab>
     <panel-tab id="tab02">
-      <p>TAB 02</p>
-      <panel-list class="container">
+      <p>Intro paragraph.</p>
+      <panel-list>
         <div>
           <div id="elem"></div>
           <div>
@@ -87,7 +90,7 @@
       </panel-list>
     </panel-tab>
     <panel-tab id="tab03">
-      <p>TAB 03</p>
+      <p>Intro paragraph.</p>
       <panel-list>
         <p>Sticky header/scrolllable content (no js).</p>
         <p>Vitae tempus quam pellentesque nec. Odio aenean sed adipiscing diam donec adipiscing tristique risus. Congue eu consequat ac felis donec et odio.</p>
@@ -95,24 +98,25 @@
       </panel-list>
     </panel-tab>
     <panel-tab id="tab04">
-      <p>TAB 04</p>
+      <p>Intro paragraph.</p>
       <panel-list>
-        <p>Sticky header/scrolllable content (no js).</p>
-        <p>Lectus mauris ultrices eros in cursus turpis massa. Ultrices gravida dictum fusce ut placerat orci.</p>
-        <p>Quisque id diam vel quam elementum. Ut sem viverra aliquet eget. Elementum tempus egestas sed sed risus pretium.</p>
+        <a class="twitter-timeline" 
+           data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" 
+           data-theme="dark"
+         href="https://twitter.com/dragontheory/lists/god?ref_src=twsrc%5Etfw">A Twitter List by dragontheory</a>
       </panel-list>
     </panel-tab>
     <panel-tab id="tab05">
-      <p>TAB 05</p>
+      <p>Intro paragraph or descriptive details about this curated list.</p>
       <panel-list>
-        <p>Sticky header/scrolllable content (no js).</p>
-        <p>Mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et.</p>
-        <p>Et molestie ac feugiat sed lectus vestibulum mattis. Vestibulum morbi blandit cursus risus at ultrices mi tempus.</p>
+        <a class="twitter-timeline" 
+           data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" 
+           data-theme="dark" href="https://twitter.com/dragontheory/lists/1443917294070079511?ref_src=twsrc%5Etfw">A Twitter List by dragontheory</a> 
       </panel-list>
     </panel-tab>
   </main>
   <aside>
-    <h4>ASIDE</h4>
+    <h4>Sources</h4>
     <panel-list>
       <p>Sticky header/scrolllable content (no js).</p>
       <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available.</p>
@@ -122,7 +126,7 @@
     </panel-list>
   </aside>
   <aside-2>
-    <h4>ASIDE-2</h4>
+    <h4>More Details About This List</h4>
     <panel-list>
       <div class="unsupported">
         <p>Your browser does not support <span-bold>CSS :has() pseudo-class</span-bold>.</p>
@@ -141,6 +145,7 @@
     <app-version>v.0.00001</app-version>
   </footer>
 </app-container>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script type="text/javascript" charset="utf-8" src="assets/js/scripts.js"></script>
     <noscript>
       <style>
