--- a/index.html
+++ b/index.html
@@ -15,136 +15,132 @@
 
   <body style="opacity: 0.0; transition: opacity 1s ease-in-out;">
     <app-container>
-  <header>
-    <app-logo>HEADER</app-logo>
-    <label for="toggleLayout">
-      <input type="checkbox" id="toggleLayout" />
-      <demo-buttons>Layouts</demo-buttons>
-    </label>
-    <label for="oneMenu">
-      <demo-buttons>Menu</demo-buttons>
-      <menu>
-        <li>Save for later</li>
-        <li>Share this news</li>
-      </menu>
-    </label>
-    <label for="toggleTheme">
-      <input type="checkbox" id="toggleTheme" />
-      <demo-buttons>&#9788;</demo-buttons>
-    </label>
-  </header>
-  <nav>
-    <h4>Twitter Topics</h4>
-    <panel-list>
-      <label for="radio01">
-        <input type="radio" id="radio01" name="radio" checked />
-        <list-cell>Everything</list-cell>
-      </label>
-      <label for="radio02">
-        <input type="radio" id="radio02" name="radio" />
-        <list-cell>Web Dev</list-cell>
-      </label>
-      <label for="radio03">
-        <input type="radio" id="radio03" name="radio" />
-        <list-cell>CSS Only</list-cell>
-      </label>
-      <label for="radio04">
-        <input type="radio" id="radio04" name="radio" />
-        <list-cell>GOD</list-cell>
-      </label>
-      <label for="radio05">
-        <input type="radio" id="radio05" name="radio" />
-        <list-cell>News</list-cell>
-      </label>
-    </panel-list>
-  </nav>
-  <main>
-    <h4>Curated Tweets by DragonTheory : :</h4>
-    <panel-tab id="tab01">
-      <p>Intro paragraph.</p>
-      <panel-list>
-        <a class="twitter-timeline" 
-           data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" 
-           data-theme="dark"
-           href="https://twitter.com/dragontheory?ref_src=twsrc%5Etfw" 
-           data-aria-polite="polite">Tweets by dragontheory</a>
-      </panel-list>
-    </panel-tab>
-    <panel-tab id="tab02">
-      <p>Intro paragraph.</p>
-      <panel-list>
-        <div>
-          <div id="elem"></div>
-          <div>
-            <p>Sticky header/scrolllable content (no js).</p>
-            <p>Eget mauris pharetra et ultrices neque ornare aenean euismod elementum. Massa enim nec dui nunc mattis enim.</p>
-            <p>Viverra suspendisse potenti nullam ac tortor vitae. Ornare lectus sit amet est placerat in egestas erat. Mi proin sed libero enim sed faucibus turpis in eu. Iaculis at erat pellentesque adipiscing commodo elit. Ac orci phasellus egestas tellus rutrum tellus pellentesque.</p>
-            <p>Integer feugiat scelerisque varius morbi enim nunc faucibus a. Non odio euismod lacinia at quis risus sed. Donec enim diam vulputate ut. Tempor nec feugiat nisl pretium fusce id velit ut tortor. Dolor sit amet consectetur adipiscing elit duis tristique sollicitudin. Massa massa ultricies mi quis hendrerit dolor magna eget.</p>
-            <p>Viverra suspendisse potenti nullam ac tortor vitae. Ornare lectus sit amet est placerat in egestas erat. Mi proin sed libero enim sed faucibus turpis in eu. Iaculis at erat pellentesque adipiscing commodo elit. Ac orci phasellus egestas tellus rutrum tellus pellentesque.</p>
-            <p>Integer feugiat scelerisque varius morbi enim nunc faucibus a. Non odio euismod lacinia at quis risus sed. Donec enim diam vulputate ut. Tempor nec feugiat nisl pretium fusce id velit ut tortor. Dolor sit amet consectetur adipiscing elit duis tristique sollicitudin. Massa massa ultricies mi quis hendrerit dolor magna eget.</p>
-            <p>Viverra suspendisse potenti nullam ac tortor vitae. Ornare lectus sit amet est placerat in egestas erat. Mi proin sed libero enim sed faucibus turpis in eu. Iaculis at erat pellentesque adipiscing commodo elit. Ac orci phasellus egestas tellus rutrum tellus pellentesque.</p>
-            <p>Integer feugiat scelerisque varius morbi enim nunc faucibus a. Non odio euismod lacinia at quis risus sed. Donec enim diam vulputate ut. Tempor nec feugiat nisl pretium fusce id velit ut tortor. Dolor sit amet consectetur adipiscing elit duis tristique sollicitudin. Massa massa ultricies mi quis hendrerit dolor magna eget.</p>
+      <header>
+        <app-logo>D7460N Template</app-logo>
+        <label for="toggleLayout">
+          <input type="checkbox" id="toggleLayout" checked />
+          <demo-buttons>Layouts</demo-buttons>
+        </label>
+        <!-- <label for="oneMenu">
+          <demo-buttons>Menu</demo-buttons>
+          <menu>
+            <li>Save for later</li>
+            <li>Share this news</li>
+          </menu>
+        </label> -->
+        <label for="toggleTheme">
+          <input type="checkbox" id="toggleTheme" />
+          <demo-buttons>&#9788;</demo-buttons>
+        </label>
+      </header>
+      <nav>
+        <h4>Filters</h4>
+        <panel-list>
+          <label for="radio01">
+            <input type="radio" id="radio01" name="radio" checked />
+            <list-cell>Curated</list-cell>
+          </label>
+          <label for="radio02">
+            <input type="radio" id="radio02" name="radio" />
+            <list-cell>CSS</list-cell>
+          </label>
+          <label for="radio03">
+            <input type="radio" id="radio03" name="radio" />
+            <list-cell>Web Dev</list-cell>
+          </label>
+          <label for="radio04">
+            <input type="radio" id="radio04" name="radio" />
+            <list-cell>Bible</list-cell>
+          </label>
+          <label for="radio05">
+            <input type="radio" id="radio05" name="radio" />
+            <list-cell>Politics</list-cell>
+          </label>
+        </panel-list>
+      </nav>
+      <main>
+        <!-- <h4>Curated Tweets by DragonTheory : :</h4> -->
+        <panel-tab id="tab01">
+          <p>Twitter : : <a href="https://twitter.com/dragontheory" target="_new">@dragontheory</a></p>
+          <panel-list>
+            <a class="twitter-timeline loading" 
+               data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" 
+               data-theme="dark"
+               href="https://twitter.com/dragontheory?ref_src=twsrc%5Etfw" 
+               data-aria-polite="polite"></a>
+          </panel-list>
+        </panel-tab>
+        <panel-tab id="tab02">
+          <p>Modern HTML, CSS, web design/development</p>
+          <panel-list>
+            <a class="twitter-timeline loading" 
+               data-theme="dark"
+               data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" 
+               href="https://twitter.com/dragontheory/lists/web?ref_src=twsrc%5Etfw"></a>
+          </panel-list>
+        </panel-tab>
+        <panel-tab id="tab03">
+          <p>All things web design/development</p>
+          <panel-list>
+
+          <a class="twitter-timeline loading" 
+             data-theme="dark" 
+             data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" 
+             href="https://twitter.com/alienlebarge/lists/web-dev?ref_src=twsrc%5Etfw"></a>
+
+          </panel-list>
+        </panel-tab>
+        <panel-tab id="tab04">
+          <p>All things Bible</p>
+          <panel-list>
+            <a class="twitter-timeline loading" 
+               data-theme="dark"
+               data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" 
+
+             href="https://twitter.com/dragontheory/lists/god?ref_src=twsrc%5Etfw"></a>
+          </panel-list>
+        </panel-tab>
+        <panel-tab id="tab05">
+          <p>All things politics</p>
+          <panel-list>
+            <a class="twitter-timeline loading" 
+               data-theme="dark" 
+               data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" 
+               href="https://twitter.com/dragontheory/lists/1443917294070079511?ref_src=twsrc%5Etfw"></a> 
+          </panel-list>
+        </panel-tab>
+      </main>
+      <aside>
+        <h4>Sources</h4>
+        <panel-list>
+          <p>Sticky header/scrolllable content (no js).</p>
+          <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available.</p>
+          <p>Adipiscing enim eu turpis egestas pretium aenean. Posuere morbi leo urna molestie at elementum eu facilisis. Aenean et tortor at risus viverra adipiscing at in. Egestas sed tempus urna et pharetra pharetra massa.</p>
+          <p>ASIDE content. In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available.</p>
+          <p>Adipiscing enim eu turpis egestas pretium aenean. Posuere morbi leo urna molestie at elementum eu facilisis. Aenean et tortor at risus viverra adipiscing at in. Egestas sed tempus urna et pharetra pharetra massa.</p>
+        </panel-list>
+      </aside>
+      <aside-2>
+        <h4>More Details About This List</h4>
+        <panel-list>
+          <div class="unsupported">
+            <p>Your browser does not support <span-bold>CSS :has() pseudo-class</span-bold>.</p>
+            <p>Coming soon...</p>
+            <p>In the mean-time, switch to a Chromium based browser.</p>
           </div>
-        </div>
-        <a href="#elem" class="top"></a>
-      </panel-list>
-    </panel-tab>
-    <panel-tab id="tab03">
-      <p>Intro paragraph.</p>
-      <panel-list>
-        <p>Sticky header/scrolllable content (no js).</p>
-        <p>Vitae tempus quam pellentesque nec. Odio aenean sed adipiscing diam donec adipiscing tristique risus. Congue eu consequat ac felis donec et odio.</p>
-        <p>Adipiscing enim eu turpis egestas pretium aenean. Posuere morbi leo urna molestie at elementum eu facilisis. Aenean et tortor at risus viverra adipiscing at in. Egestas sed tempus urna et pharetra pharetra massa.</p>
-      </panel-list>
-    </panel-tab>
-    <panel-tab id="tab04">
-      <p>Intro paragraph.</p>
-      <panel-list>
-        <a class="twitter-timeline" 
-           data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" 
-           data-theme="dark"
-         href="https://twitter.com/dragontheory/lists/god?ref_src=twsrc%5Etfw">A Twitter List by dragontheory</a>
-      </panel-list>
-    </panel-tab>
-    <panel-tab id="tab05">
-      <p>Intro paragraph or descriptive details about this curated list.</p>
-      <panel-list>
-        <a class="twitter-timeline" 
-           data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" 
-           data-theme="dark" href="https://twitter.com/dragontheory/lists/1443917294070079511?ref_src=twsrc%5Etfw">A Twitter List by dragontheory</a> 
-      </panel-list>
-    </panel-tab>
-  </main>
-  <aside>
-    <h4>Sources</h4>
-    <panel-list>
-      <p>Sticky header/scrolllable content (no js).</p>
-      <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available.</p>
-      <p>Adipiscing enim eu turpis egestas pretium aenean. Posuere morbi leo urna molestie at elementum eu facilisis. Aenean et tortor at risus viverra adipiscing at in. Egestas sed tempus urna et pharetra pharetra massa.</p>
-      <p>ASIDE content. In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available.</p>
-      <p>Adipiscing enim eu turpis egestas pretium aenean. Posuere morbi leo urna molestie at elementum eu facilisis. Aenean et tortor at risus viverra adipiscing at in. Egestas sed tempus urna et pharetra pharetra massa.</p>
-    </panel-list>
-  </aside>
-  <aside-2>
-    <h4>More Details About This List</h4>
-    <panel-list>
-      <div class="unsupported">
-        <p>Your browser does not support <span-bold>CSS :has() pseudo-class</span-bold>.</p>
-        <p>Coming soon...</p>
-        <p>In the mean-time, switch to a Chromium based browser.</p>
-      </div>
-      <div class="supported">
-        <p>
-          Your browser supports <span-bold>CSS :has() pseudo-class</span-bold>!
-        </p>
-      </div>
-    </panel-list>
-  </aside-2>
-  <footer>
-    <powered-by>FOOTER</powered-by>
-    <app-version>v.0.00001</app-version>
-  </footer>
-</app-container>
+          <div class="supported">
+            <p>
+              Your browser supports <span-bold>CSS :has() pseudo-class</span-bold>!
+            </p>
+          </div>
+        </panel-list>
+      </aside-2>
+      <footer>
+        <powered-by>FOOTER</powered-by>
+        <app-version>v.0.00001</app-version>
+      </footer>
+    </app-container>
+
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script type="text/javascript" charset="utf-8" src="assets/js/scripts.js"></script>
     <noscript>
@@ -153,5 +149,5 @@
       </style>
     </noscript>
   </body>
-
+  
 </html>
