--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </label>
           <label for="radio02">
             <input type="radio" id="radio02" name="radio" />
-            <list-cell>CSS</list-cell>
+            <list-cell>HTML/CSS</list-cell>
           </label>
           <label for="radio03">
             <input type="radio" id="radio03" name="radio" />
@@ -50,10 +50,14 @@
           </label>
           <label for="radio04">
             <input type="radio" id="radio04" name="radio" />
-            <list-cell>Bible</list-cell>
+            <list-cell>2A</list-cell>
           </label>
           <label for="radio05">
             <input type="radio" id="radio05" name="radio" />
+            <list-cell>Bible</list-cell>
+          </label>
+          <label for="radio06">
+            <input type="radio" id="radio06" name="radio" />
             <list-cell>Politics</list-cell>
           </label>
         </panel-list>
@@ -91,6 +95,14 @@
           </panel-list>
         </panel-tab>
         <panel-tab id="tab04">
+          <p>All things Second Amendment</p>
+          <panel-list>
+            <a class="twitter-timeline" 
+               data-theme="dark" 
+               data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" href="https://twitter.com/dragontheory/lists/1668054846845362180?ref_src=twsrc%5Etfw"></a>
+          </panel-list>
+        </panel-tab>
+        <panel-tab id="tab05">
           <p>All things Bible</p>
           <panel-list>
             <a class="twitter-timeline loading" 
@@ -100,7 +112,7 @@
              href="https://twitter.com/dragontheory/lists/god?ref_src=twsrc%5Etfw"></a>
           </panel-list>
         </panel-tab>
-        <panel-tab id="tab05">
+        <panel-tab id="tab06">
           <p>All things politics</p>
           <panel-list>
             <a class="twitter-timeline loading" 
