--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </label>
           <label for="radio05">
             <input type="radio" id="radio05" name="radio" />
-            <list-cell>Bible</list-cell>
+            <list-cell>JESUS</list-cell>
           </label>
           <label for="radio06">
             <input type="radio" id="radio06" name="radio" />
@@ -103,7 +103,7 @@
           </panel-list>
         </panel-tab>
         <panel-tab id="tab05">
-          <p>All things Bible</p>
+          <p>All things JESUS, the Bible, and our origins</p>
           <panel-list>
             <a class="twitter-timeline loading" 
                data-theme="dark"
