--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="D7460N" />
-    <meta name="description" content="D7460N Template" />
+    <meta name="description" content="Modern HTML5/CSS3 front-end template" />
     <!-- <meta name="color-scheme" content="dark light" /> -->
-    <title>D7460N</title>
+    <title>D7460N Template</title>
     <link type="image/svg+xml" rel="icon" href="assets/images/logo.svg" />
     <link type="text/css" rel="stylesheet" href="assets/css/styles.css" />
   </head>
