PWA manifest and dark light icons

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="canonical" href="" />
     <link type="image/svg+xml" rel="icon" href="assets/images/logo.svg" />
     <link type="text/css" rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
   </head>
 
   <body style="opacity: 0.0; transition: opacity 1s ease-in-out;">
