Added PWA maskable icons, added meta theme-color

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="robots" content="index, archive" />
     <!-- <meta name="color-scheme" content="dark light" /> -->
     <link rel="canonical" href="" />
+    <meta name="theme-color" content="#0d101b" />
     <link type="image/svg+xml" rel="icon" href="assets/images/logo.svg" />
     <link type="text/css" rel="stylesheet" href="assets/css/styles.css" />
     <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
@@ -70,19 +71,19 @@
         <panel-tab id="tab01">
           <p>Twitter : : <a href="https://twitter.com/dragontheory" target="_new">@dragontheory</a></p>
           <panel-list>
-            <a class="twitter-timeline loading" 
-               data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" 
+            <a class="twitter-timeline loading"
+               data-chrome="noborders, noscrollbar, transparent, noheader, nofooter"
                data-theme="dark"
-               href="https://twitter.com/dragontheory?ref_src=twsrc%5Etfw" 
+               href="https://twitter.com/dragontheory?ref_src=twsrc%5Etfw"
                data-aria-polite="polite"></a>
           </panel-list>
         </panel-tab>
         <panel-tab id="tab02">
           <p>Modern HTML, CSS, web design/development</p>
           <panel-list>
-            <a class="twitter-timeline loading" 
+            <a class="twitter-timeline loading"
                data-theme="dark"
-               data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" 
+               data-chrome="noborders, noscrollbar, transparent, noheader, nofooter"
                href="https://twitter.com/dragontheory/lists/web?ref_src=twsrc%5Etfw"></a>
           </panel-list>
         </panel-tab>
@@ -90,9 +91,9 @@
           <p>All things web design/development</p>
           <panel-list>
 
-          <a class="twitter-timeline loading" 
-             data-theme="dark" 
-             data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" 
+          <a class="twitter-timeline loading"
+             data-theme="dark"
+             data-chrome="noborders, noscrollbar, transparent, noheader, nofooter"
              href="https://twitter.com/alienlebarge/lists/web-dev?ref_src=twsrc%5Etfw"></a>
 
           </panel-list>
@@ -100,17 +101,17 @@
         <panel-tab id="tab04">
           <p>All things Second Amendment</p>
           <panel-list>
-            <a class="twitter-timeline" 
-               data-theme="dark" 
+            <a class="twitter-timeline"
+               data-theme="dark"
                data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" href="https://twitter.com/dragontheory/lists/1668054846845362180?ref_src=twsrc%5Etfw"></a>
           </panel-list>
         </panel-tab>
         <panel-tab id="tab05">
           <p>All things JESUS, the Bible, and our origins</p>
           <panel-list>
-            <a class="twitter-timeline loading" 
+            <a class="twitter-timeline loading"
                data-theme="dark"
-               data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" 
+               data-chrome="noborders, noscrollbar, transparent, noheader, nofooter"
 
              href="https://twitter.com/dragontheory/lists/god?ref_src=twsrc%5Etfw"></a>
           </panel-list>
@@ -120,8 +121,8 @@
           <panel-list>
             <a class="twitter-timeline loading" 
                data-theme="dark" 
-               data-chrome="noborders, noscrollbar, transparent, noheader, nofooter" 
-               href="https://twitter.com/dragontheory/lists/1443917294070079511?ref_src=twsrc%5Etfw"></a> 
+               data-chrome="noborders, noscrollbar, transparent, noheader, nofooter"
+               href="https://twitter.com/dragontheory/lists/1443917294070079511?ref_src=twsrc%5Etfw"></a>
           </panel-list>
         </panel-tab>
       </main>
@@ -157,12 +158,13 @@
     </app-container>
 
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <script type="text/javascript" charset="utf-8" src="assets/js/scripts.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/assets/js/scripts.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/assets/js/app.js"></script>
     <noscript>
       <style>
         body {opacity: 1.0;}
       </style>
     </noscript>
   </body>
-  
+
 </html>
