Removed slash for manifest.json, added canonical UTL

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="description" content="Modern HTML5/CSS3 front-end template" />
     <meta name="robots" content="index, archive" />
     <!-- <meta name="color-scheme" content="dark light" /> -->
-    <link rel="canonical" href="" />
+    <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
+    <link rel="canonical" href="https://d7460n.github.io/ui/" />
     <meta name="theme-color" content="#0d101b" />
     <link type="image/svg+xml" rel="icon" href="assets/images/logo.svg" />
     <link type="text/css" rel="stylesheet" href="assets/css/styles.css" />
-    <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
   </head>
 
   <body style="opacity: 0.0; transition: opacity 1s ease-in-out;">
