Removed leading slash on JS URLs.

--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
       </footer>
     </app-container>
 
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <script type="text/javascript" charset="utf-8" src="/assets/js/scripts.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/assets/js/app.js"></script>
+    <script type="text/javascript" charset="utf-8" src="https://platform.twitter.com/widgets.js" async></script>
+    <script type="text/javascript" charset="utf-8" src="assets/js/scripts.js"></script>
+    <script type="text/javascript" charset="utf-8" src="assets/js/app.js"></script>
     <noscript>
       <style>
         body {opacity: 1.0;}
