--- a/index.html
+++ b/index.html
@@ -138,16 +138,7 @@
       <aside-2>
         <h4>More Details About This List</h4>
         <panel-list>
-          <div class="unsupported">
-            <p>Your browser does not support <span-bold>CSS :has() pseudo-class</span-bold>.</p>
-            <p>Coming soon...</p>
-            <p>In the mean-time, switch to a Chromium based browser.</p>
-          </div>
-          <div class="supported">
-            <p>
-              Your browser supports <span-bold>CSS :has() pseudo-class</span-bold>!
-            </p>
-          </div>
+          <div class="support"></div>
         </panel-list>
       </aside-2>
       <footer>
