--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="robots" content="index, archive" />
     <!-- <meta name="color-scheme" content="dark light" /> -->
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
-    <link rel="canonical" href="https://d7460n.github.io/ui/" />
+    <link rel="canonical" href="https://d7460n.dev/" />
     <link rel="icon" type="image/svg+xml" href="assets/images/logo.svg" />
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
   </head>
